--- a/local/.env
+++ b/local/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 
 SEND_SMS=false
 #Mobile number without 88
-TEST_SMS_NUMBER=01983554082
+TEST_SMS_NUMBER=01817085892
 
 SEND_OFFER_ENABLED=true
 
@@ -38,10 +38,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=b9afe8b246e3dc
+MAIL_PASSWORD=4ca70ccfceb2f5
 MAIL_ENCRYPTION=null
 
 
